Update Circuit Breaker
