# src/modules/querytool/querytool.openapi.json
@@ -14,10 +14,10 @@
     }
   },
   "paths": {
-    "/mssql/": {
+    "/mssql/query": {
       "post": {
         "tags": ["SQL Server 2000 Database Tool"],
-        "summary": "Run raw SQL on SQL Server 2000",
+        "summary": "Run SELECT query on SQL Server 2000",
         "security": [{ "bearerAuth": [] }],
         "requestBody": {
           "required": true,
@@ -29,7 +29,7 @@
                   "sql": { "type": "string", "example": "SELECT * FROM sysobjects" },
                   "skip": { "type": "integer", "example": 0 },
                   "take": { "type": "integer", "example": 10 },
-                  "connection": { "type": "string", "example": "default", "description": "Connection endpoint to use (server-side, optional)" }
+                  "connection": { "type": "string", "example": "default" }
                 },
                 "required": ["sql"]
               }
@@ -44,11 +44,131 @@
                 "schema": {
                   "type": "object",
                   "properties": {
-                    "message": { "type": "string", "example": "success" },
+                    "statusCode": { "type": "integer", "example": 200 },
+                    "message": { "type": "string", "example": "" },
                     "skip": { "type": "integer", "example": 0 },
                     "take": { "type": "integer", "example": 10 },
                     "totalCount": { "type": "integer", "example": 42 },
-                    "data": { "type": "array", "items": { "type": "object" } }
+                    "data": { "type": "array", "items": { "type": "object" } },
+                    "columns": {
+					  "type": "array",
+					  "items": { "type": "string" },
+					  "example": ["id", "name", "created_at"]
+					}
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/mssql/insert": {
+      "post": {
+        "tags": ["SQL Server 2000 Database Tool"],
+        "summary": "Run INSERT query on SQL Server 2000",
+        "security": [{ "bearerAuth": [] }],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "sql": { "type": "string", "example": "INSERT INTO users (name,email) VALUES ('Andi','andi@test.com')" },
+                  "connection": { "type": "string", "example": "default" }
+                },
+                "required": ["sql"]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Insert success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "statusCode": { "type": "integer", "example": 201 },
+                    "message": { "type": "string", "example": "insert success" }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/mssql/update": {
+      "post": {
+        "tags": ["SQL Server 2000 Database Tool"],
+        "summary": "Run UPDATE query on SQL Server 2000",
+        "security": [{ "bearerAuth": [] }],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "sql": { "type": "string", "example": "UPDATE users SET email='new@test.com' WHERE id=1" },
+                  "connection": { "type": "string", "example": "default" }
+                },
+                "required": ["sql"]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Update success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+					"statusCode": { "type": "integer", "example": 200 },
+                    "message": { "type": "string", "example": "update success" }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/mssql/delete": {
+      "post": {
+        "tags": ["SQL Server 2000 Database Tool"],
+        "summary": "Run DELETE query on SQL Server 2000",
+        "security": [{ "bearerAuth": [] }],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "sql": { "type": "string", "example": "DELETE FROM users WHERE id=1" },
+                  "connection": { "type": "string", "example": "default" }
+                },
+                "required": ["sql"]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Delete success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "statusCode": { "type": "integer", "example": 200 },
+                    "message": { "type": "string", "example": "delete success" }
                   }
                 }
               }
