# src/modules/querytool/querytool.routes.ts
@@ -5,8 +5,21 @@ import { QueryToolController } from "./querytool.controller";
 const router = Router();
 const controller = new QueryToolController();
 
-// SQL Server generic query
-router.post("/mssql", jwtAuth , controller.runMssqlQuery.bind(controller));
+// ---------------------
+// SQL Server Endpoints
+// ---------------------
+
+// SELECT
+router.post("/mssql/query", jwtAuth, controller.runMssqlQuery.bind(controller));
+
+// INSERT
+router.post("/mssql/insert", jwtAuth, controller.runMssqlInsert.bind(controller));
+
+// UPDATE
+router.post("/mssql/update", jwtAuth, controller.runMssqlUpdate.bind(controller));
+
+// DELETE
+router.post("/mssql/delete", jwtAuth, controller.runMssqlDelete.bind(controller));
 
 // PostgreSQL
 router.post("/pgsql", jwtAuth , controller.runPgQuery.bind(controller));
